test/conformance/chainsaw/validating-policies/exceptions/exclude-images-autogen/bad-cronjob.yaml
apiVersion: batch/v1
kind: CronJob
metadata:
  name: bad-cronjob
spec:
  schedule: "*/5 * * * *"
  jobTemplate:
    metadata:
      labels:
        prod: "true" 
    spec:
      template:
        metadata:
          labels:
            prod: "true"
        spec:
          containers:
          - name: secure-container
            image: ubuntu:latest
            command: ["echo", "Hello, world"]
            securityContext:
              seccompProfile:
                type: Unconfined
          restartPolicy: OnFailure
