test/conformance/chainsaw/validating-policies/exceptions/exclude-images-autogen/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: exclude-images-autogen
spec:
  concurrent: false
  steps:
  - name: create exception
    try:
    - create:
        file: exception.yaml
    - sleep:
        duration: 10s
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-validating-policy-ready
    use:
      template: ../../../_step-templates/validating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: exclude-images-autogen
  - name: check autogen policy
    try:
    - assert:
        file: check-autogen.yaml
  - name: create skipped deployment
    try:
    - create:
        file: skipped-deployment.yaml
  - name: create bad deployment
    try:
    - create:
        file: bad-deployment.yaml
        expect:
          - check:
              ($error != null): true
  - name: create skipped cronjob
    try:
    - create:
        file: skipped-cronjob.yaml
  - name: create bad cronjob
    try:
    - create:
        file: bad-cronjob.yaml
        expect:
          - check:
              ($error != null): true
